--- a/index.html
+++ b/index.html
@@ -23,10 +23,11 @@
 <body>
 
   <!-- Empieza Navbar -->
-
   <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top navbar-color sticky-top ">
     <div class="container">
-      <a href="#" class="navbar-brand">Hogary</a>
+      <a href="index.html" class="navbar-brand">
+        <img src="Assets/img/hogari-logo.png" alt="" width="100" class="d-inline-block align-text-top">
+      </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -53,14 +54,9 @@
           </li>
         </ul>
         <ul class="navbar-nav col-xs-4 border-mq">
-          <li class="nav-item text-menu">
-            <a href="#" class="nav-link"> API </a>
-          </li>
-          <li class="nav-item text-menu">
-            <a href="#" class="nav-link"> Help </a>
-          </li>
-          <li class="nav-item text-menu">
 
+
+          <li class="nav-item text-menu">
             <a href="#" class="nav-link" data-bs-toggle="modal" data-bs-target="#modalLogin"> Login </a>
           </li>
 
