cambios en la validacion

--- a/contacto.html
+++ b/contacto.html
@@ -98,12 +98,12 @@
                     </div>
                 </div>
                 <div class="col">
-                    <div class="miFormulario">
-                        <form action="mailto:ivan.alm99@gmail.com" method="post" id="form">
+                    <div class=" needs-validation" class="miFormulario" novalidate>
+                        <form  id="form">
                             <div class="form">
                                 
                                 <div class="grupo">
-                                    <input type="text" name="" id="name" maxlength="20" style="text-align: center;"><br>
+                                    <input type="text" class="form-control" name="" id="name" maxlength="20" style="text-align: center;" required><br>
                                     <label for="" style="margin-left: 90px;" style="text-align: center;">Nombre</label>
                                 </div>
                                 <div class="grupo">
