Se agregaron modificaciones al codigo de JS respecto a la validacion

--- a/FormularioArrendadorSandra.html
+++ b/FormularioArrendadorSandra.html
@@ -138,14 +138,14 @@
                       <!-- Mascotas  -->
                     <label>¿Aceptas mascotas en tu propiedad?</label>
                     <div class="form-check form-amue">
-                        <input class="form-check-input amue" type="radio" name="amue" id="exampleRadios1" value="option1" checked >
+                        <input class="form-check-input amue" type="radio" name="amue" id="exampleRadios1" value="YES" checked >
                         <label class="form-check-label" for="exampleRadios1">
                           Si
                         </label>
                       </div>
                       <div class="form-check form-amue">
-                        <input class="form-check-input amue" type="radio" name="amue" id="exampleRadios2" value="option2">
-                        <label class="form-check-label" for="exampleRadios2">
+                        <input class="form-check-input amue" type="radio" name="amue" id="exampleRadios1" value="NO">
+                        <label class="form-check-label" for="exampleRadios1">
                           No
                         </label>
                       </div>  <!--Termina Mascotas-->
@@ -163,7 +163,7 @@
                       <br>
                     <div class="form-group"> <!-- Tamaño de la propiedad -->
                         <label for="inputAddress">Introduce el tamaño de tu propiedad en metros cuadrados</label>
-                        <input type="number" class="form-control" id="tamano" placeholder="50 m2" min="1" required >
+                        <input type="text" class="form-control" id="tamano" placeholder="50 m2" min="1" required >
                         <div class="invalid-feedback">Debe completar los datos</div>
                         <div class="valid-feedback">Campo valido</div>
                       </div> <!-- Termina tamaño de propiedad -->
