--- a/contacto.html
+++ b/contacto.html
@@ -16,8 +16,8 @@
 
 <body>
 
-  <!-- Empieza Navbar -->
-  <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top navbar-color sticky-top ">
+   <!-- Empieza Navbar -->
+   <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top navbar-color sticky-top ">
     <div class="container">
       <a href="index.html" class="navbar-brand">
         <img src="Assets/img/hogari-logo.png" alt="" width="100" class="d-inline-block align-text-top">
@@ -37,9 +37,7 @@
           <li class="nav-item">
             <a href="/ventas.html" class="nav-link"> Productos </a>
           </li>
-          <li class="nav-item">
-            <a href="/formulario.html" class="nav-link"> Formulario </a>
-          </li>
+
           <li class="nav-item">
             <a href="/contacto.html" class="nav-link"> Contáctanos </a>
           </li>
@@ -54,12 +52,11 @@
             <a href="#" class="nav-link" data-bs-toggle="modal" data-bs-target="#modalLogin"> Login </a>
           </li>
 
-          <a href="" class="btn btn-primary btn-signup">Sign Up</a>
+          <a href="./formulario.html" class="btn btn-primary btn-signup">Sign Up</a>
         </ul>
       </div>
     </div>
   </nav> <!-- navbar -->
-
   <main>
     <div class="banner-area">
       <div class="content-area">
@@ -143,6 +140,70 @@
       </div>
     </div>
   </section>
+ <!-- iniciamos modal de login -->
+  <!-- El modal de login nos va servir emular un inicio de sesión -->
+  <!-- Modal -->
+  <div class="modal fade" id="modalLogin" tabindex="-1" aria-labelledby="modalLoginLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="modalLoginLabel">Iniciar Sesión</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <p class="text-center h3 py-3">Bienvenido de vuelta</p>
+          <form id="form">
+            <div class="mb-3">
+              <label for="email" class="form-label">Correo electronico</label>
+              <input type="email" class="form-control" id="email" placeholder="Tu correo electrónico"
+                aria-describedby="emailHelp">
+            </div>
+            <div class="mb-3">
+              <label for="contraseña" class="form-label">Contraseña</label>
+              <input type="password" class="form-control" id="contraseña">
+            </div>
+            <p id="warnings"></p>
+            <div class="mb-3 form-check">
+              <input type="checkbox" class="form-check-input" id="exampleCheck1">
+              <label class="form-check-label" for="exampleCheck1">Recordar la contraseña</label>
+            </div>
+            <!-- <button type="submit" class="btn btn-primary d-flex justify-content-between btn-signup" id="toastLogin">Iniciar sesión</button> -->
+            <button type="submit" class="btn btn-primary d-flex justify-content-between btn-signup" id="toastBtn"
+              data-bs-dismiss="modal">Iniciar sesión</button>
+          </form>
+          <a href="./Registro.html" class="nav-link active" aria-current="page">
+            ¿No eres miembro? Regístrate 
+          </a>
+        </div>
+        <div class="modal-footer">
+
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
+        </div>
+      </div>
+    </div>
+  </div> <!-- Fin del modal de login -->
+
+  <!-- toast -->
+  <section>
+
+    <!-- ! Forma corta -->
+    <!-- Esto hará que aparezca en la parte inferior izquierda... -->
+    <div class="position-fixed bottom-0 end-0 p-3" style="z-index:10;">
+      <div id="toast" class="toast hide" role="alert" aria-live="assertive" aria-atomic="true">
+        <div class="toast-header">
+          <strong class="me-auto">Inicio de sesión</strong>
+          <small>Conexión exitosa...</small>
+          <!-- Para que se cierre el toast con data-bs-dismiss -->
+          <button type="button" data-bs-dismiss="toast" aria-label="Cerrar notificación" class="btn-close"></button>
+        </div>
+        <div class="toast-body">
+          <p>Bienvenido de vuelta!</p>
+        </div> 
+      </div> 
+    </div>  
+  </section> <!-- Fin del toast -->
+
+
 
 
   <footer class="bg-light text-dark text-center pb-2 pt-4 footer-class">
