--- a/nosotros.html
+++ b/nosotros.html
@@ -17,49 +17,47 @@
 </head>
 
 <body>
-  <!-- Empieza Navbar -->
-  <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top navbar-color sticky-top ">
-    <div class="container">
-      <a href="index.html" class="navbar-brand">
-        <img src="Assets/img/hogari-logo.png" alt="" width="100" class="d-inline-block align-text-top">
-      </a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="col-xs-4 navbar-nav mx-auto ms-auto py-2 text-menu">
-          <li class="nav-item">
-            <!--La clase active se debe de poner en cada página del en el navbar -->
-            <a href="/index.html" class="nav-link active" aria-current="page">
-              Inicio
-            </a>
-          </li>
-          <li class="nav-item">
-            <a href="/ventas.html" class="nav-link"> Productos </a>
-          </li>
-          <li class="nav-item">
-            <a href="/formulario.html" class="nav-link"> Formulario </a>
-          </li>
-          <li class="nav-item">
-            <a href="/contacto.html" class="nav-link"> Contáctanos </a>
-          </li>
-          <li class="nav-item">
-            <a href="/nosotros.html" class="nav-link"> Acerca de nosotros </a>
-          </li>
-        </ul>
-        <ul class="navbar-nav col-xs-4 border-mq">
-
-
-          <li class="nav-item text-menu">
-            <a href="#" class="nav-link" data-bs-toggle="modal" data-bs-target="#modalLogin"> Login </a>
-          </li>
-
-          <a href="" class="btn btn-primary btn-signup">Sign Up</a>
-        </ul>
+    <!-- Empieza Navbar -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top navbar-color sticky-top ">
+      <div class="container">
+        <a href="index.html" class="navbar-brand">
+          <img src="Assets/img/hogari-logo.png" alt="" width="100" class="d-inline-block align-text-top">
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="col-xs-4 navbar-nav mx-auto ms-auto py-2 text-menu">
+            <li class="nav-item">
+              <!--La clase active se debe de poner en cada página del en el navbar -->
+              <a href="/index.html" class="nav-link active" aria-current="page">
+                Inicio
+              </a>
+            </li>
+            <li class="nav-item">
+              <a href="/ventas.html" class="nav-link"> Productos </a>
+            </li>
+  
+            <li class="nav-item">
+              <a href="/contacto.html" class="nav-link"> Contáctanos </a>
+            </li>
+            <li class="nav-item">
+              <a href="/nosotros.html" class="nav-link"> Acerca de nosotros </a>
+            </li>
+          </ul>
+          <ul class="navbar-nav col-xs-4 border-mq">
+  
+  
+            <li class="nav-item text-menu">
+              <a href="#" class="nav-link" data-bs-toggle="modal" data-bs-target="#modalLogin"> Login </a>
+            </li>
+  
+            <a href="./formulario.html" class="btn btn-primary btn-signup">Sign Up</a>
+          </ul>
+        </div>
       </div>
-    </div>
-  </nav> <!-- navbar -->
+    </nav> <!-- navbar -->
 
   <main>
     <div class=""  data-aos="fade-up">
@@ -699,7 +697,7 @@
   </div>
   <!--Primer modal de Sebastian-->
 
-  <!-- iniciamos modal de login -->
+ <!-- iniciamos modal de login -->
   <!-- El modal de login nos va servir emular un inicio de sesión -->
   <!-- Modal -->
   <div class="modal fade" id="modalLogin" tabindex="-1" aria-labelledby="modalLoginLabel" aria-hidden="true">
@@ -711,9 +709,9 @@
         </div>
         <div class="modal-body">
           <p class="text-center h3 py-3">Bienvenido de vuelta</p>
-          <form>
+          <form id="form">
             <div class="mb-3">
-              <label for="email" class="form-label">Correo Electrónico</label>
+              <label for="email" class="form-label">Correo electronico</label>
               <input type="email" class="form-control" id="email" placeholder="Tu correo electrónico"
                 aria-describedby="emailHelp">
             </div>
@@ -721,6 +719,7 @@
               <label for="contraseña" class="form-label">Contraseña</label>
               <input type="password" class="form-control" id="contraseña">
             </div>
+            <p id="warnings"></p>
             <div class="mb-3 form-check">
               <input type="checkbox" class="form-check-input" id="exampleCheck1">
               <label class="form-check-label" for="exampleCheck1">Recordar la contraseña</label>
@@ -729,6 +728,9 @@
             <button type="submit" class="btn btn-primary d-flex justify-content-between btn-signup" id="toastBtn"
               data-bs-dismiss="modal">Iniciar sesión</button>
           </form>
+          <a href="./Registro.html" class="nav-link active" aria-current="page">
+            ¿No eres miembro? Regístrate 
+          </a>
         </div>
         <div class="modal-footer">
 
@@ -753,10 +755,12 @@
         </div>
         <div class="toast-body">
           <p>Bienvenido de vuelta!</p>
-        </div>
-      </div>
-    </div>
+        </div> 
+      </div> 
+    </div>  
   </section> <!-- Fin del toast -->
+
+
 
   <footer class="bg-light text-dark text-center pb-2 pt-4 footer-class">
     <p>Inmobiliaria &copy; 2022 Todos los derechos Reservados</p>
