--- a/index.html
+++ b/index.html
@@ -26,10 +26,11 @@
 <body>
 
   <!-- Empieza Navbar -->
-
   <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top navbar-color sticky-top ">
     <div class="container">
-      <a href="#" class="navbar-brand">Hogary</a>
+      <a href="index.html" class="navbar-brand">
+        <img src="Assets/img/hogari-logo.png" alt="" width="100" class="d-inline-block align-text-top">
+      </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -56,14 +57,9 @@
           </li>
         </ul>
         <ul class="navbar-nav col-xs-4 border-mq">
-          <li class="nav-item text-menu">
-            <a href="#" class="nav-link"> API </a>
-          </li>
-          <li class="nav-item text-menu">
-            <a href="#" class="nav-link"> Help </a>
-          </li>
-          <li class="nav-item text-menu">
 
+
+          <li class="nav-item text-menu">
             <a href="#" class="nav-link" data-bs-toggle="modal" data-bs-target="#modalLogin"> Login </a>
           </li>
 
@@ -255,9 +251,9 @@
         </div>
         <div class="modal-body">
           <p class="text-center h3 py-3">Bienvenido de vuelta</p>
-          <form>
+          <form id="form">
             <div class="mb-3">
-              <label for="email" class="form-label">Correo Electrónico</label>
+              <label for="email" class="form-label">Correo electronico</label>
               <input type="email" class="form-control" id="email" placeholder="Tu correo electrónico"
                 aria-describedby="emailHelp">
             </div>
@@ -265,6 +261,7 @@
               <label for="contraseña" class="form-label">Contraseña</label>
               <input type="password" class="form-control" id="contraseña">
             </div>
+            <p id="warnings"></p>
             <div class="mb-3 form-check">
               <input type="checkbox" class="form-check-input" id="exampleCheck1">
               <label class="form-check-label" for="exampleCheck1">Recordar la contraseña</label>
@@ -298,18 +295,18 @@
         <div class="toast-body">
           <p>Bienvenido de vuelta!</p>
         </div>
-      </div>
-    </div>
+      </div> 
+    </div>  
   </section> <!-- Fin del toast -->
 
 
-
+ 
 
  
   <footer class="bg-light text-dark text-center pb-2 pt-4 footer-class">
     <p>Inmobiliaria &copy; 2022 Todos los derechos Reservados</p>
-</footer> <!-- Termina footer -->
-
+  </footer> <!-- Termina footer -->
+  <script src="./Assets/JS/login/login.js"></script>
   <script src="/quieneSomos.html"></script>
   <script src="/Assets/JS/quieneSomos.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js" integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk" crossorigin="anonymous"></script>
