--- a/contacto.html
+++ b/contacto.html
@@ -10,29 +10,17 @@
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <!--Cargamos los iconos de boostrap-->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
-<<<<<<< HEAD
- <script src="/Assets/CSS/contacto/contacto.css"></script>
-=======
   <link rel="stylesheet" href="/Assets/CSS/contacto/contact.css">
->>>>>>> cc7684c3d8cb6ec9d3f457a558814ee4d674beb7
   <title>preuba form</title>
 </head>
 
 <body>
 
-<<<<<<< HEAD
-  <!-- Empieza Navbar -->
-  <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top navbar-color sticky-top ">
-    <div class="container">
-      <a href="index.html" class="navbar-brand">
-        <img src="/Assets/img/" alt="" width="100" class="d-inline-block align-text-top">
-=======
    <!-- Empieza Navbar -->
    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top navbar-color sticky-top ">
     <div class="container">
       <a href="index.html" class="navbar-brand">
         <img src="Assets/img/hogari-logo.png" alt="" width="100" class="d-inline-block align-text-top">
->>>>>>> cc7684c3d8cb6ec9d3f457a558814ee4d674beb7
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -49,21 +37,6 @@
           <li class="nav-item">
             <a href="/ventas.html" class="nav-link"> Productos </a>
           </li>
-<<<<<<< HEAD
-          <li class="nav-item">
-            <a href="/formulario.html" class="nav-link"> Formulario </a>
-          </li>
-          <li class="nav-item">
-            <a href="/contacto.html" class="nav-link"> Contáctanos </a>
-          </li>
-          <li class="nav-item">
-            <a href="/nosotros.html" class="nav-link"> Acerca de nosotros </a>
-          </li>
-        </ul>
-        <ul class="navbar-nav col-xs-4 border-mq">
-
-
-=======
 
           <li class="nav-item">
             <a href="/contacto.html" class="nav-link"> Contáctanos </a>
@@ -75,24 +48,15 @@
         <ul class="navbar-nav col-xs-4 border-mq">
 
 
->>>>>>> cc7684c3d8cb6ec9d3f457a558814ee4d674beb7
           <li class="nav-item text-menu">
             <a href="#" class="nav-link" data-bs-toggle="modal" data-bs-target="#modalLogin"> Login </a>
           </li>
 
-<<<<<<< HEAD
-          <a href="" class="btn btn-primary btn-signup">Sign Up</a>
-=======
           <a href="./formulario.html" class="btn btn-primary btn-signup">Sign Up</a>
->>>>>>> cc7684c3d8cb6ec9d3f457a558814ee4d674beb7
         </ul>
       </div>
     </div>
   </nav> <!-- navbar -->
-<<<<<<< HEAD
-
-=======
->>>>>>> cc7684c3d8cb6ec9d3f457a558814ee4d674beb7
   <main>
     <div class="banner-area">
       <div class="content-area">
@@ -176,15 +140,6 @@
       </div>
     </div>
   </section>
-<<<<<<< HEAD
-
-
-  <footer class="bg-light text-dark text-center pb-2 pt-4 footer-class">
-    <p>Inmobiliaria &copy; 2022 Todos los derechos Reservados</p>
-  </footer>
-
-
-=======
  <!-- iniciamos modal de login -->
   <!-- El modal de login nos va servir emular un inicio de sesión -->
   <!-- Modal -->
@@ -256,7 +211,6 @@
   </footer>
 
 
->>>>>>> cc7684c3d8cb6ec9d3f457a558814ee4d674beb7
   <!-- <script src="/Assets/JS/contacto/contacto.js"></script> -->
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
@@ -265,3 +219,5 @@
     crossorigin="anonymous"></script>
     <script src='assets/js/contacto/app-contact.js'></script>
 </body>
+
+</html>
