--- a/ventas3.html
+++ b/ventas3.html
@@ -150,7 +150,7 @@
 <div class="container">
   <div class="row d-flex justify-content-center">
     <div class="col-sm" >
-      <div id="list-items">
+      <div id="list-items" >
 
       </div>
     </div>
@@ -166,7 +166,8 @@
     </div>
   </div>
 </div>
-<div class="row align-items-center" style="margin-left: 180px;">
+
+<div class="row align-items" style="margin-left: 180px;">
   <div class="col mb-4">
    
   </div>
@@ -174,9 +175,9 @@
     <nav aria-label="Page navigation example">
       <ul class="pagination justify-content">
 
-        <li class="page-item"><a class="page-link" href="#">1</a></li>
+        <li class="page-item"><a class="page-link" href="/ventas.html">1</a></li>
         <li class="page-item"><a class="page-link" href="/ventas2.html">2</a></li>
-        <li class="page-item"><a class="page-link" href="/ventas3.html">3</a></li>
+        <li class="page-item"><a class="page-link" href="#">3</a></li>
        
       </ul>
     </nav>
@@ -185,6 +186,8 @@
   
   </div>
 </div>
+
+
   <footer class="bg-light text-dark text-center pb-2 pt-4 footer-class">
       <p>Inmobiliaria &copy; 2022 Todos los derechos Reservados</p>
   </footer> <!-- Termina footer -->
@@ -192,7 +195,7 @@
 
 
  
-    <script src="/assets/js/ventas/ventas.js"></script>
+    <script src="/assets/js/ventas/ventas3.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js" integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-kjU+l4N0Yf4ZOJErLsIcvOU2qSb74wXpOhqTvwVx3OElZRweTnQ6d31fXEoRD1Jy" crossorigin="anonymous"></script>
