--- a/contacto.html
+++ b/contacto.html
@@ -70,6 +70,20 @@
     </div>
   </main>
 
+<section>
+  <div class="container" id="animation">
+    <div class="avatar">
+      <a href="/contacto.html">
+        <img src="/Assets/img/contactanos/carta1.jpg" alt="Skytsunami" style=" width: 100%; height: 110px;"/>
+      </a>
+    </div>
+    </div>
+</section>
+
+
+
+
+
 
   <section>
     <div class="container mt-5 mb-5">
@@ -77,7 +91,7 @@
         <div class="col-md-4">
           <iframe
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3732.5055046820285!2d-103.43232928460094!3d20.6896876046417!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8428aee7fa9f7c5f%3A0xd647fb04da70b150!2sAv%20Naciones%20Unidas%2C%20Zapopan%2C%20Jal.!5e0!3m2!1ses-419!2smx!4v1652283656690!5m2!1ses-419!2smx"
-            width="400px" height="400px" style="border:0;margin-left: 40px;" allowfullscreen="" loading="lazy"
+            width="400px" height="400px" style="border:0;" allowfullscreen="" loading="lazy"
             referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
         <div class="col-md-4">
