correccion reseña y navbar

--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@
 
 
           <li class="nav-item text-menu">
-            <a href="#" class="nav-link" data-bs-toggle="modal" data-bs-target="#modalLogin"> Login </a>
+            <a href="#" class="nav-link" data-bs-toggle="modal" data-bs-target="#modalLogin"> Iniciar sesión </a>
           </li>
 
-          <a href="./formulario.html" class="btn btn-primary btn-signup">Sign Up</a>
+          <a href="./formulario.html" class="btn btn-primary btn-signup">Únete</a>
         </ul>
       </div>
     </div>
@@ -77,7 +77,7 @@
             <h2 style="color:white ;">Una nueva vida a solo un click</h2>
             <!-- Formulario de busqueda -->
             <form class="form-inline my-2 my-lg-0">
-              <input class="form-control mr-sm-2" type="search" placeholder="¿Doonde deseas ir?" aria-label="Search">
+              <input class="form-control mr-sm-2" type="search" placeholder="¿Dónde deseas ir?" aria-label="Search">
               <button class="btn btn-success my-2 my-sm-0" type="submit">Buscar</button>
 
             </form>
@@ -176,12 +176,12 @@
       </div>
 
       <div class="col">
-        <p>Cambia tu vida con estos sencillos pasos</p>
+        <p>Cambia tu vida con estos sencillos pasos:</p>
         <ul>
-          <li>1.-Entra en nuestra pagina</li>
-          <li>2.-Busca la ciudad que mas te guste</li>
-          <li>3.-Encuentre el lugar de tus suenios</li>
-          <li>4.-Da un simple y cambia tu vida</li>
+          <li>1.-Entra en nuestra página.</li>
+          <li>2.-Busca la ciudad que mas te guste.</li>
+          <li>3.-Encuentra el lugar de tus sueños.</li>
+          <li>4.-Da un simple click y cambia tu vida.</li>
         </ul>
       </div>
     </div>
@@ -201,9 +201,11 @@
               <div class="item">
                 <div class="mb-3" style="max-width: 18rem;">
                   <div class="card-body text-secondary">
-                    <h5 class="card-title">Secondary card title</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                      card's content.</p>
+                    <h5 class="card-title">Mauricio Pérez</h5>
+                    <p class="card-text">Recomiendo Hogari. Todo claro y transparente desde el comienzo siempre informando cualquier
+                       movimiento de la propiedad. 
+                      Lo que más me gustó fue que informan quién será tu inquilino con sus antecedentes personales y de renta,
+                       cosa que no me pasaba con otras corredoras.</p>
                   </div>
                 </div>
 
@@ -211,9 +213,10 @@
               <div class="item">
                 <div class="mb-3" style="max-width: 18rem;">
                   <div class="card-body text-secondary">
-                    <h5 class="card-title">Secondary card title</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                      card's content.</p>
+                    <h5 class="card-title">Bárbara Cooper</h5>
+                    <p class="card-text">Quiero agradecer por el increíble servicio de Hogari. Desde el primer día que me
+                       ayudaron absolutamente en todo para rentar el departamento, incluso yo estando en el extranjero. 
+                       Las fotos y vídeos que tomaron fueron profesionales y el departamento se rentó en menos de 6 días.</p>
                   </div>
                 </div>
 
@@ -221,9 +224,9 @@
               <div class="item">
                 <div class=" mb-3" style="max-width: 18rem;">
                   <div class="card-body text-secondary">
-                    <h5 class="card-title">Secondary card title</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                      card's content.</p>
+                    <h5 class="card-title">Roberto Picón</h5>
+                    <p class="card-text">Hogari fue rápido, atento y 100% digital. Me rentaron dos departamentos sin salir de la casa,
+                       ¡muchas gracias!.</p>
                   </div>
                 </div>
 
@@ -231,9 +234,10 @@
               <div class="item">
                 <div class=" mb-3" style="max-width: 18rem;">
                   <div class="card-body text-secondary">
-                    <h5 class="card-title">Secondary card title</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                      card's content.</p>
+                    <h5 class="card-title">Susi Osorio</h5>
+                    <p class="card-text">Me ha encantado la experiencia en Hogari. Es todo amigable y bien explicado.
+                       Fácil de contactar y responden rápido. Estoy feliz porque en un mes ya tengo inquilino y todo ha
+                        funcionado bien.</p>
                   </div>
                 </div>
 
@@ -241,9 +245,10 @@
               <div class="item">
                 <div class=" mb-3" style="max-width: 18rem;">
                   <div class="card-body ">
-                    <h5 class="card-title">Secondary card title</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                      card's content.</p>
+                    <h5 class="card-title">Carlos Cuadra</h5>
+                    <p class="card-text">La experiencia con ustedes fue bastante buena, muy recomendable.
+                       El tema del contrato con la firma electrónica fue súper expedito a diferencia de otras que demoran más
+                        o tienen más pasos.</p>
                   </div>
                 </div>
 
