--- a/base.html
+++ b/base.html
@@ -46,9 +46,9 @@
         </ul>
         <ul class="navbar-nav col-xs-4 border-mq">
           <li class="nav-item text-menu">
-            <a href="#" class="nav-link" data-bs-toggle="modal" data-bs-target="#modalLogin"> Login </a>
+            <a href="#" class="nav-link" data-bs-toggle="modal" data-bs-target="#modalLogin">Iniciar sesión</a>
           </li>
-          <a href="" class="btn btn-primary btn-signup">Sign Up</a>
+          <a href="" class="btn btn-primary btn-signup">Únete</a>
         </ul>
       </div>
     </div>
