--- a/prueba.html
+++ b/prueba.html
@@ -56,7 +56,7 @@
                         <a href="#" class="nav-link"> Login </a>
                     </li>
 
-                    <a href="" class="btn btn-primary btn-signup">Sign Up</a>
+                    <a href="" class="btn btn-primary btn-signup">Únete</a>
                 </ul>
             </div>
         </div>
