--- a/ventas.html
+++ b/ventas.html
@@ -47,10 +47,10 @@
 
 
         <li class="nav-item text-menu">
-          <a href="#" class="nav-link" data-bs-toggle="modal" data-bs-target="#modalLogin"> Login </a>
+          <a href="#" class="nav-link" data-bs-toggle="modal" data-bs-target="#modalLogin"> Iniciar sesión </a>
         </li>
 
-        <a href="./formulario.html" class="btn btn-primary btn-signup">Sign Up</a>
+        <a href="./formulario.html" class="btn btn-primary btn-signup">Únete</a>
       </ul>
     </div>
   </div>
