se agrega barra para navegar entre paginas al final de ventas

--- a/ventas.html
+++ b/ventas.html
@@ -73,8 +73,9 @@
             <li><a class="dropdown-item" href="#">Ciudad de mexico</a></li>
             <li><a class="dropdown-item" href="#">Puebla</a></li>
           </ul>
-          
+    
         </form>
+
         <a href="./formarrendador.html" class="nav-link"> Agregar un nuevo producto </a>
       </div>
     </div>
@@ -144,7 +145,8 @@
   </section> <!-- Fin del toast -->
 
 
-
+  <br> 
+  <br>
 
 <!--Columnas y Tarjetas-->
 <div class="container">
@@ -167,7 +169,24 @@
   </div>
 </div>
 
-
+ <br>
+ <br>
+ <br>
+ <div class="container">
+  <div class="row">
+    <div class="col-md-12 d-flex justify-content-center p-5"> <!--- col-md-12 para centrar el formulario -->
+ <nav aria-label="Page navigation example">
+  <ul class="pagination">
+    <li class="page-item"><a class="page-link" href="#">Previous</a></li>
+    <li class="page-item"><a class="page-link" href="#">1</a></li>
+    <li class="page-item"><a class="page-link" href="#">2</a></li>
+    <li class="page-item"><a class="page-link" href="#">3</a></li>
+    <li class="page-item"><a class="page-link" href="#">Next</a></li>
+  </ul>
+</nav>
+    </div>
+  </div>
+ </div>
 
   <footer class="bg-light text-dark text-center pb-2 pt-4 footer-class">
       <p>Inmobiliaria &copy; 2022 Todos los derechos Reservados</p>
