se agregaron los detalles de Ivan

--- a/index.html
+++ b/index.html
@@ -68,10 +68,8 @@
             <h2 class="text-white">Una nueva vida a solo un click</h2>
             <!-- Formulario de busqueda -->
             <form class="form-inline my-2 my-lg-0">
-              <input class="form-control mr-sm-2" type="search" placeholder="¿Donde deseas ir?" aria-label="Search">
+              <input class="form-control mr-sm-2" type="search" placeholder="¿Que estás buscando?" aria-label="Search">
               <button class="btn btn-success my-2 my-sm-0" type="submit">Buscar</button>
-              <h2 class="text-white py-2">Cambia tu vida, haz scroll</h2>
-              <i class="text-white py-2 display-3 bi bi-arrow-down-circle-fill"></i>
             </form>
           </div>
         </div>
@@ -155,26 +153,28 @@
     </div>
   </section>
 
-
   <section>
-    <div class="container p-4">
-      <div class="row">
-        <div class="col-md-12 bg-dark p-5 text-white" style="text-align:center;font-size: 60px;">Encuentra tu siguente hogar ideal</div>
-        <div class="col-md-3 bg-dark text-center text-white p-4" >
-          <p class='text-justify fs-4'>Consigue un cambio en tu vida con estos simples cuatro pasos:</p>
-          <ul class="list-group list-unstyled fw-bold">
-            <li>1. Entra en nuestro citio</li>
-            <li>2. Busca en donde quieres vivir</li>
-            <li>3. Pide una cotizacion</li>
-            <li>4. Inicia una nueva vida</li>
-          </ul> 
+    <div class="row align-items-center">
+      <div class="col">
+
+
+        <div data-aos="fade-right"  data-aos-duration="3000">
+          <img src="/Assets/img/casa.jpg" alt="">
         </div>
-        <div class="col-md-9 bg-light" >
-         <p class="text-center py-5 my-2 h3">Ponle un cambio en tu vida</p>
-         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sed quis nisi illo, odio nulla, ipsam quos repellat cum similique debitis dignissimos exercitationem quo voluptatibus? Perferendis deleniti id voluptatem voluptas quasi.</p>
-        </div>
+
+      </div>
+
+      <div class="col">
+        <p>Cambia tu vida con estos sencillos pasos:</p>
+        <ul>
+          <li>1.-Entra en nuestra página.</li>
+          <li>2.-Busca la ciudad que mas te guste.</li>
+          <li>3.-Encuentra el lugar de tus sueños.</li>
+          <li>4.-Da un simple click y cambia tu vida.</li>
+        </ul>
       </div>
     </div>
+
   </section>
   <!--Reseñas-->
 <section>
