--- a/contacto.html
+++ b/contacto.html
@@ -67,6 +67,15 @@
     </div>
   </main>
 
+  <section>
+    <div class="container" id="animation">
+      <div class="avatar">
+        <a href="/contacto.html">
+          <img src="/Assets/img/contactanos/Card-contact.jpeg" alt="Skytsunami" style=" width: 100%; height: 110px;"/>
+        </a>
+      </div>
+      </div>
+  </section>
 
   <section>
     <div class="container mt-5 mb-5">
