Correciones de ortografia

--- a/contacto.html
+++ b/contacto.html
@@ -11,7 +11,7 @@
   <!--Cargamos los iconos de boostrap-->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
   <link rel="stylesheet" href="/Assets/CSS/contacto/contact.css">
-  <title>preuba form</title>
+  <title>Contacto</title>
 </head>
 
 <body>
@@ -168,7 +168,7 @@
           <p class="text-center h3 py-3">Bienvenido de vuelta</p>
           <form id="form">
             <div class="mb-3">
-              <label for="email" class="form-label">Correo electronico</label>
+              <label for="email" class="form-label">Correo electrónico</label>
               <input type="email" class="form-control" id="email" placeholder="Tu correo electrónico"
                 aria-describedby="emailHelp">
             </div>
@@ -179,7 +179,7 @@
             <p id="warnings"></p>
             <div class="mb-3 form-check">
               <input type="checkbox" class="form-check-input" id="exampleCheck1">
-              <label class="form-check-label" for="exampleCheck1">Recordar la contraseña</label>
+              <label class="form-check-label" for="exampleCheck1">Recordar contraseña</label>
             </div>
             <!-- <button type="submit" class="btn btn-primary d-flex justify-content-between btn-signup" id="toastLogin">Iniciar sesión</button> -->
             <button type="submit" class="btn btn-primary d-flex justify-content-between btn-signup" id="toastBtn"
@@ -211,7 +211,7 @@
           <button type="button" data-bs-dismiss="toast" aria-label="Cerrar notificación" class="btn-close"></button>
         </div>
         <div class="toast-body">
-          <p>Bienvenido de vuelta!</p>
+          <p>¡Bienvenido de vuelta!</p>
         </div> 
       </div> 
     </div>  
