--- a/nosotros.html
+++ b/nosotros.html
@@ -38,7 +38,6 @@
             <li class="nav-item">
               <a href="/ventas.html" class="nav-link"> Productos </a>
             </li>
-  
             <li class="nav-item">
               <a href="/contacto.html" class="nav-link"> Contáctanos </a>
             </li>
@@ -66,7 +65,7 @@
           <div class="content">
             <h1 class="display-5 fw-bold">Inicia una nueva vida con nosotros</h1>
             <div class="col-lg-6 mx-auto">
-              <p class="lead mb-4">Creamos Houm con la misión de poder rentar y vender inmuebles rápido, seguro y
+              <p class="lead mb-4">Creamos Hogari con la misión de poder rentar y vender inmuebles rápido, seguro y
                 online.
               </p>
               <p>
@@ -89,27 +88,27 @@
       <div class="row">
         <h3 class="h1 text-center py-5">Nuestros valores</h3>
         <div class="col-lg-4">
-          <h2 class="text-center">Nuestros productos</h2>
+          <h2 class="text-center">Nuestra meta</h2>
           <div class="text-center display-5 py-2"><i class="bi bi-heart"></i></div>
 
           <p class="lead text-center">
 
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam, quos, quisquam.
+            Facilitar la renta para jovenes en busqueda de oportunidades en las grandes ciudades a través del país.
           </p>
         </div>
 
         <div class="col-lg-4">
-          <h2 class="text-center">Nuestros productos</h2>
+          <h2 class="text-center">Nuestras locaciones</h2>
           <div class="text-center display-5 py-2"><i class="bi bi-house-door"></i></div>
           <p class="lead text-center">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam, quos, quisquam.
+            Nuestra seleccion de inmuebles están ubicadas en las zonas mas optimas tanto para estudiantes como para profesionales.
           </p>
         </div>
         <div class="col-lg-4">
-          <h2 class="text-center">Nuestros productos</h2>
+          <h2 class="text-center">Crecimiento</h2>
           <div class="text-center display-5 py-2"><i class="bi bi-bar-chart-line"></i></div>
           <p class="lead text-center">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam, quos, quisquam.
+            Nuestra empresa crece a través de la renta de inmuebles, ofreciendo una experiencia unica, facilitanto la busqueda de hogares.
           </p>
         </div>
       </div>
@@ -119,7 +118,7 @@
   <section  data-aos="fade-right">
     <div class="container">
       <div class="row">
-        <h2 class="text-center pb-5">¿Quienes somos?</h2>
+        <h2 class="text-center pb-5">¿Quiénes somos?</h2>
         <div class="col-md-4"><img src="Assets/img/living.jpg" alt=""
             class="img-fluid rounded shadow-lg p-3 mb-5 bg-body"></div>
         <div class="col-md-8">
@@ -167,7 +166,7 @@
         </div>
         <div class="col">
           <div class="card card-cover h-100 overflow-hidden text-white bg-dark rounded-5 shadow-lg"
-            style="background-image: url('assets/img/fotosEquipo/Martin.jpg');">
+           style="background-image: url('assets/img/fotosEquipo/Martin.jpg');">
             <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
               <div class="cards-responsive"></div>
               <ul data-aos="fade-down" class="d-flex list-unstyled mt-auto">
