--- a/ventas.html
+++ b/ventas.html
@@ -35,7 +35,6 @@
         <li class="nav-item">
           <a href="/ventas.html" class="nav-link"> Productos </a>
         </li>
-
         <li class="nav-item">
           <a href="/contacto.html" class="nav-link"> Contáctanos </a>
         </li>
@@ -91,7 +90,7 @@
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
-          <p class="text-center h3 py-3">Bienvenido de vuelta</p>
+          <p class="text-center h3 py-3">!Bienvenido de vuelta¡</p>
           <form id="form">
             <div class="mb-3">
               <label for="email" class="form-label">Correo electronico</label>
@@ -112,7 +111,7 @@
               data-bs-dismiss="modal">Iniciar sesión</button>
           </form>
           <a href="./Registro.html" class="nav-link active" aria-current="page">
-            ¿No eres miembro? Regístrate 
+            ¿No eres miembro? Regístrate. 
           </a>
         </div>
         <div class="modal-footer">
@@ -137,7 +136,7 @@
           <button type="button" data-bs-dismiss="toast" aria-label="Cerrar notificación" class="btn-close"></button>
         </div>
         <div class="toast-body">
-          <p>Bienvenido de vuelta!</p>
+          <p>¡Bienvenido de vuelta!</p>
         </div> 
       </div> 
     </div>  
