--- a/Registro.html
+++ b/Registro.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Equipo Dinamita</title>
+    <title>Regístrate</title>
     <!-- Iconos de bootstrap -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
     <!-- Cargamos bootstrap desde el CDN -->
@@ -70,7 +70,7 @@
                             <div class="row">
                                 <div class="col">
                                     <div class="shadow-xl p-5 mb-5 mt-4 bg-body rounded-5">
-                                        <h2>Registro de usuario</h2>
+                                        <h2>Regístro de usuario</h2>
                                         <form class="row g-3 needs-validation" id="enviar-mail" novalidate>
                                             <div class="mb-2 py-2 position-relative ">
                                                 <!-- <label for="nombre" class="form-label">Nombre</label> -->
@@ -85,7 +85,7 @@
                                                 <input type="text" id="apellidoPat" name="apellidoPat" class="form-control" placeholder="Apellido Paterno" required>
                                                 <div class="valid-tooltip">Completado...</div>
                                                 <div class="invalid-tooltip">
-                                                    Falta apellido Paterno
+                                                    Falta apellido Paterno.
                                             </div>
                                         </div>
                                             <div class="mb-2 py-2 position-relative">
@@ -101,7 +101,7 @@
                                                 <input type="mail" id="email" name="correo" class="form-control" placeholder="Ingresa tu Email" required>
                                                 <div class="valid-tooltip">Completado...</div>
                                                 <div class="invalid-tooltip">
-                                                    Ingresa un email válido
+                                                    Ingresa un email válido.
                                             </div>
                                         </div>
                                             <div class="mb-2 py-2 position-relative">
@@ -110,7 +110,7 @@
                                                     required>
                                                     <div class="valid-tooltip">Completado...</div>
                                                     <div class="invalid-tooltip">
-                                                        Por favor ingresa una contraseña que debe de tener minimo 8 caracteres
+                                                        Por favor ingresa una contraseña que debe de tener mínimo 8 caracteres.
                                                 </div>
                                             </div>
 
