--- a/formulario.html
+++ b/formulario.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Equipo Dinamita</title>
+  <title>Regístrate</title>
   <!-- Iconos de bootstrap -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
   <!-- Cargamos bootstrap desde el CDN -->
@@ -77,11 +77,11 @@
                 <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
               </div>
               <div class="mb-3">
-                <label for="exampleInputPassword1" class="form-label" style="color: white;">Password</label>
+                <label for="exampleInputPassword1" class="form-label" style="color: white;">Contraseña</label>
                 <input type="password" class="form-control" id="exampleInputPassword1">
               </div>
               <div class="mb-3">
-                <label for="exampleInputPassword1" class="form-label" style="color: white;">Repeat password</label>
+                <label for="exampleInputPassword1" class="form-label" style="color: white;">Repite tu contraseña</label>
                 <input type="password" class="form-control" id="exampleInputPassword1">
               </div>
               <div class="mb-3">
@@ -89,10 +89,10 @@
                 <input type="password" class="form-control" id="exampleInputPassword1">
               </div>
               <div class="mb-3">
-                <label for="exampleInputPassword1" class="form-label" style="color: white;">Phone</label>
+                <label for="exampleInputPassword1" class="form-label" style="color: white;">Telefono</label>
                 <input type="password" class="form-control" id="exampleInputPassword1">
               </div>
-              <button type="submit" class="btn btn-primary btn-signup" style="margin-top: 10px;">Submit</button>
+              <button type="submit" class="btn btn-primary btn-signup" style="margin-top: 10px;">Enviar</button>
             </form>
           </div>
         </div>
@@ -118,7 +118,7 @@
           <p class="text-center h3 py-3">Bienvenido de vuelta</p>
           <form id="form">
             <div class="mb-3">
-              <label for="email" class="form-label">Correo electronico</label>
+              <label for="email" class="form-label">Correo electrónico</label>
               <input type="email" class="form-control" id="email" placeholder="Tu correo electrónico"
                 aria-describedby="emailHelp">
             </div>
@@ -129,14 +129,14 @@
             <p id="warnings"></p>
             <div class="mb-3 form-check">
               <input type="checkbox" class="form-check-input" id="exampleCheck1">
-              <label class="form-check-label" for="exampleCheck1">Recordar la contraseña</label>
+              <label class="form-check-label" for="exampleCheck1">Recordar contraseña</label>
             </div>
             <!-- <button type="submit" class="btn btn-primary d-flex justify-content-between btn-signup" id="toastLogin">Iniciar sesión</button> -->
             <button type="submit" class="btn btn-primary d-flex justify-content-between btn-signup" id="toastBtn"
               data-bs-dismiss="modal">Iniciar sesión</button>
           </form>
           <a href="./Registro.html" class="nav-link active" aria-current="page">
-            ¿No eres miembro? Regístrate 
+            ¿No eres miembro? Regístrate.
           </a>
         </div>
         <div class="modal-footer">
@@ -161,7 +161,7 @@
           <button type="button" data-bs-dismiss="toast" aria-label="Cerrar notificación" class="btn-close"></button>
         </div>
         <div class="toast-body">
-          <p>Bienvenido de vuelta!</p>
+          <p>¡Bienvenido de vuelta!</p>
         </div> 
       </div> 
     </div>  
