--- a/formularioVentas.html
+++ b/formularioVentas.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Equipo Dinamita</title>
+    <title>Formulario de Ventas</title>
     <!-- Iconos de bootstrap -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
     <!-- Cargamos bootstrap desde el CDN -->
@@ -39,9 +39,6 @@
             <a href="/ventas.html" class="nav-link"> Productos </a>
           </li>
           <li class="nav-item">
-            <a href="/formulario.html" class="nav-link"> Formulario </a>
-          </li>
-          <li class="nav-item">
             <a href="/contacto.html" class="nav-link"> Contáctanos </a>
           </li>
           <li class="nav-item">
@@ -65,7 +62,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-4 p-3">
-                    <h3 class="fw-bold">Reglas y preferencias</h3>
+                    <h3 class="fw-bold">Reglas y Preferencias</h3>
                     <div class="d-flex justify-content-between pe-2 my-5">
                         <div class="form-check">
                             <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
@@ -89,7 +86,7 @@
                         </div>
                     </div>
                     <div class="my-5">
-                        <p>¿Cuál es la edad mínima de sus inquilinos preferidos?</p>
+                        <p>¿Cuál es la edad mínima preferidos de sus inquilinos?</p>
                         <label for="edadMin"></label>
                         <select class='form-select' name="edadMin" id="edadMin">
                             <optgroup label="Preferencia">
@@ -101,7 +98,7 @@
                             </optgroup>
                         </select>
 
-                        <p class='mt-5'>¿Cuál es la edad máxima de sus inquilinos preferidos?</p>
+                        <p class='mt-5'>¿Cuál es la edad máxima preferidos de sus inquilinos?</p>
                         <label class="" for="edadMin"></label>
                         <select class='form-select' name="edadMin" id="edadMin">
                             <optgroup label="Preferencia">
@@ -177,6 +174,7 @@
                             </div>
                         </div>
                     </div>
+                    <!--
                     <div>
                         <p>Que tipo de inquilinos prefieres</p>
                         <div class="d-flex justify-content-between pe-2 my-5">
@@ -202,7 +200,7 @@
                             </div>
                         </div>
                     </div>
-                    
+                    -->
                 </div>
             </div>
         </div>
