--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Equipo Dinamita</title>
+  <title>Inicio</title>
   <!-- Iconos de bootstrap -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
   <!-- Cargamos bootstrap desde el CDN -->
@@ -225,8 +225,8 @@
                 <div class=" mb-3" style="max-width: 18rem;">
                   <div class="card-body text-secondary">
                     <h5 class="card-title">Roberto Picón</h5>
-                    <p class="card-text">Hogari fue rápido, atento y 100% digital. Me rentaron dos departamentos sin salir de la casa,
-                       ¡muchas gracias!.</p>
+                    <p class="card-text">Hogari fue rápido, atento y 100% digital. Me rentaron dos departamentos sin salir de la casa.
+                       ¡Muchas gracias!</p>
                   </div>
                 </div>
 
@@ -273,7 +273,7 @@
           <p class="text-center h3 py-3">Bienvenido de vuelta</p>
           <form id="form">
             <div class="mb-3">
-              <label for="email" class="form-label">Correo electronico</label>
+              <label for="email" class="form-label">Correo electrónico</label>
               <input type="email" class="form-control" id="email" placeholder="Tu correo electrónico"
                 aria-describedby="emailHelp">
             </div>
@@ -284,14 +284,14 @@
             <p id="warnings"></p>
             <div class="mb-3 form-check">
               <input type="checkbox" class="form-check-input" id="exampleCheck1">
-              <label class="form-check-label" for="exampleCheck1">Recordar la contraseña</label>
+              <label class="form-check-label" for="exampleCheck1">Recordar contraseña</label>
             </div>
             <!-- <button type="submit" class="btn btn-primary d-flex justify-content-between btn-signup" id="toastLogin">Iniciar sesión</button> -->
             <button type="submit" class="btn btn-primary d-flex justify-content-between btn-signup" id="toastBtn"
               data-bs-dismiss="modal">Iniciar sesión</button>
           </form>
           <a href="./Registro.html" class="nav-link active" aria-current="page">
-            ¿No eres miembro? Regístrate
+            ¿No eres miembro? Regístrate.
           </a>
         </div>
         <div class="modal-footer">
@@ -316,7 +316,7 @@
           <button type="button" data-bs-dismiss="toast" aria-label="Cerrar notificación" class="btn-close"></button>
         </div>
         <div class="toast-body">
-          <p>Bienvenido de vuelta!</p>
+          <p>¡Bienvenido de vuelta!</p>
 
         </div>
 
@@ -350,7 +350,6 @@
   <script src='assets/js/owl.carousel.min.js'></script>
   <script src='assets/js/main.js'></script>
   <script src="Assets/js/toast.js"></script>
-  <script src="../lib/anime.min.js"></script>
   <script>
     AOS.init();
   </script>
