--- a/prueba.html
+++ b/prueba.html
@@ -11,7 +11,7 @@
     <!--Cargamos los iconos de boostrap-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
     <link rel="stylesheet" href="/Assets/CSS/contacto/contacto.css">
-    <title>preuba form</title>
+    <title>Prueba Formulario</title>
 </head>
 
 <body>
@@ -36,9 +36,6 @@
                         <a href="/ventas.html" class="nav-link"> Productos </a>
                     </li>
                     <li class="nav-item">
-                        <a href="/formulario.html" class="nav-link"> Formulario </a>
-                    </li>
-                    <li class="nav-item">
                         <a href="/contacto.html" class="nav-link"> Contáctanos </a>
                     </li>
                     <li class="nav-item">
@@ -46,12 +43,6 @@
                     </li>
                 </ul>
                 <ul class="navbar-nav col-xs-4 border-mq">
-                    <li class="nav-item text-menu">
-                        <a href="#" class="nav-link"> API </a>
-                    </li>
-                    <li class="nav-item text-menu">
-                        <a href="#" class="nav-link"> Help </a>
-                    </li>
                     <li class="nav-item text-menu">
                         <a href="#" class="nav-link"> Login </a>
                     </li>
@@ -69,7 +60,7 @@
             <div class="mb-4 row" id="form">
                 <select class="form-select" required aria-label="select example" id="ciudad">
                     <option value="">Seleciona una ciudad</option>
-                    <option value="gdl">Guadalajara</option>
+                    <option value="gdl">GUADALAJARA</option>
                     <option value="cdmx">CDMX</option>
                     <option value="que">QUERETARO</option>
                 </select>
