--- a/ventas3.html
+++ b/ventas3.html
@@ -35,7 +35,6 @@
         <li class="nav-item">
           <a href="/ventas.html" class="nav-link"> Productos </a>
         </li>
-
         <li class="nav-item">
           <a href="/contacto.html" class="nav-link"> Contáctanos </a>
         </li>
@@ -112,7 +111,7 @@
               data-bs-dismiss="modal">Iniciar sesión</button>
           </form>
           <a href="./Registro.html" class="nav-link active" aria-current="page">
-            ¿No eres miembro? Regístrate 
+            ¿No eres miembro? Regístrate. 
           </a>
         </div>
         <div class="modal-footer">
@@ -137,7 +136,7 @@
           <button type="button" data-bs-dismiss="toast" aria-label="Cerrar notificación" class="btn-close"></button>
         </div>
         <div class="toast-body">
-          <p>Bienvenido de vuelta!</p>
+          <p>¡Bienvenido de vuelta!</p>
         </div> 
       </div> 
     </div>  
