Se arreglaron textos en el navbar y enlaces, ademas se agrego en el index un efecto con js y se trabajo en front end

--- a/contacto.html
+++ b/contacto.html
@@ -18,7 +18,7 @@
 <body>
    <!-- Empieza Navbar -->
    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top navbar-color sticky-top ">
-    <div class="container">
+    <div class="container"> 
       <a href="index.html" class="navbar-brand">
         <img src="Assets/img/hogari-logo.png" alt="" width="100" class="d-inline-block align-text-top">
       </a>
@@ -46,13 +46,17 @@
         </ul>
         <ul class="navbar-nav col-xs-4 border-mq">
           <li class="nav-item text-menu">
-            <a href="#" class="nav-link" data-bs-toggle="modal" data-bs-target="#modalLogin">Iniciar sesión </a>
+            <a href="#" class="nav-link" data-bs-toggle="modal" data-bs-target="#modalLogin"> Iniciar sesión </a>
           </li>
-          <a href="Registro.html" class="btn btn-primary btn-signup">Sign Up</a>
+
+          <a href="./formulario.html" class="btn btn-primary btn-signup">Únete</a>
+
+          
+
         </ul>
       </div>
     </div>
-  </nav> <!-- navbar -->
+  </nav><!-- navbar -->
   <main>
     <div class="banner-area">
       <div class="content-area">
