--- a/ventas.html
+++ b/ventas.html
@@ -44,13 +44,12 @@
         </ul>
         <ul class="navbar-nav col-xs-4 border-mq">
           <li class="nav-item text-menu">
-            <a href="#" class="nav-link" data-bs-toggle="modal" data-bs-target="#modalLogin"> Login </a>
+            <a href="#" class="nav-link" data-bs-toggle="modal" data-bs-target="#modalLogin"> Iniciar sesión </a>
           </li>
-          <a href="Registro.html" class="btn btn-primary btn-signup">Sign Up</a>
+          <a href="Registro.html" class="btn btn-primary btn-signup">Únete</a>
         </ul>
       </div>
-    </div>
-  </nav> <!-- navbar -->
+    </nav>  <!-- navbar -->
 
         
 
