--- a/ventas2.html
+++ b/ventas2.html
@@ -35,7 +35,6 @@
         <li class="nav-item">
           <a href="/ventas.html" class="nav-link"> Productos </a>
         </li>
-
         <li class="nav-item">
           <a href="/contacto.html" class="nav-link"> Contáctanos </a>
         </li>
@@ -44,17 +43,13 @@
         </li>
       </ul>
       <ul class="navbar-nav col-xs-4 border-mq">
-
-
         <li class="nav-item text-menu">
-          <a href="#" class="nav-link" data-bs-toggle="modal" data-bs-target="#modalLogin">Iniciar sesión</a>
+          <a href="#" class="nav-link" data-bs-toggle="modal" data-bs-target="#modalLogin"> Iniciar sesión </a>
         </li>
-
-        <a href="./formulario.html" class="btn btn-primary btn-signup">Únete</a>
+        <a href="Registro.html" class="btn btn-primary btn-signup">Únete</a>
       </ul>
     </div>
-  </div>
-</nav> <!-- navbar -->
+  </nav>  <!-- navbar -->
 
         
 
