--- a/login-registro.html
+++ b/login-registro.html
@@ -24,7 +24,7 @@
 
   <!-- Empieza Navbar -->
   <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top navbar-color sticky-top ">
-    <div class="container">
+    <div class="container"> 
       <a href="index.html" class="navbar-brand">
         <img src="Assets/img/hogari-logo.png" alt="" width="100" class="d-inline-block align-text-top">
       </a>
@@ -52,10 +52,13 @@
         </ul>
         <ul class="navbar-nav col-xs-4 border-mq">
           <li class="nav-item text-menu">
-            <a href="#" class="nav-link" data-bs-toggle="modal" data-bs-target="#modalLogin"> Login </a>
+            <a href="#" class="nav-link" data-bs-toggle="modal" data-bs-target="#modalLogin"> Iniciar sesión </a>
           </li>
-          <a href="Registro.html" class="btn btn-primary btn-signup">Sign Up</a>
-          <p class="" id="validacion"></p>
+
+          <a href="./formulario.html" class="btn btn-primary btn-signup">Únete</a>
+
+          
+
         </ul>
       </div>
     </div>
