--- a/contacto.html
+++ b/contacto.html
@@ -11,7 +11,7 @@
     Cargamos los estilos -->
   <!--Cargamos los iconos de boostrap-->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
-  <link rel="stylesheet" href="/Assets/CSS/contacto/contact.css">
+  <link rel="stylesheet" href="/proyecto-integrador-hogari/Assets/CSS/contacto/contact.css">
   <title>Hogari - Contáctanos</title>
 </head>
 
@@ -20,7 +20,7 @@
    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top navbar-color sticky-top ">
     <div class="container"> 
       <a href="index.html" class="navbar-brand">
-        <img src="Assets/img/hogari-logo.png" alt="" width="100" class="d-inline-block align-text-top">
+        <img src="/proyecto-integrador-hogari/Assets/img/hogari-logo.png" alt="" width="100" class="d-inline-block align-text-top">
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -30,18 +30,18 @@
         <ul class="col-xs-4 navbar-nav mx-auto ms-auto py-2 text-menu">
           <li class="nav-item">
             <!--La clase active se debe de poner en cada página del en el navbar -->
-            <a href="/index.html" class="nav-link active" aria-current="page">
+            <a href="./index.html" class="nav-link active" aria-current="page">
               Inicio
             </a>
           </li>
           <li class="nav-item">
-            <a href="/ventas.html" class="nav-link"> Productos </a>
+            <a href="./ventas.html" class="nav-link"> Productos </a>
           </li>
           <li class="nav-item">
-            <a href="/contacto.html" class="nav-link"> Contáctanos </a>
+            <a href="./contacto.html" class="nav-link"> Contáctanos </a>
           </li>
           <li class="nav-item">
-            <a href="/nosotros.html" class="nav-link"> Acerca de nosotros </a>
+            <a href="./nosotros.html" class="nav-link"> Acerca de nosotros </a>
           </li>
         </ul>
         <ul class="navbar-nav col-xs-4 border-mq">
@@ -74,7 +74,7 @@
   <div class="container" id="animation">
     <div class="avatar">
       <a href="/contacto.html">
-        <img src="/Assets/img/contactanos/carta1.jpg" alt="Skytsunami" style=" width: 100%; height: 110px;"/>
+        <img src="/proyecto-integrador-hogari/Assets/img/contactanos/carta1.jpg" alt="Skytsunami" style=" width: 100%; height: 110px;"/>
       </a>
     </div>
     </div>
