--- a/index.html
+++ b/index.html
@@ -39,25 +39,25 @@
         <ul class="col-xs-4 navbar-nav mx-auto ms-auto py-2 text-menu">
           <li class="nav-item">
             <!--La clase active se debe de poner en cada página del en el navbar -->
-            <a href="/index.html" class="nav-link active" aria-current="page">
+            <a href="./index.html" class="nav-link active" aria-current="page">
               Inicio
             </a>
           </li>
           <li class="nav-item">
-            <a href="/ventas.html" class="nav-link"> Productos </a>
+            <a href="./ventas.html" class="nav-link"> Productos </a>
           </li>
           <li class="nav-item">
-            <a href="/contacto.html" class="nav-link"> Contáctanos </a>
+            <a href="./contacto.html" class="nav-link"> Contáctanos </a>
           </li>
           <li class="nav-item">
-            <a href="/nosotros.html" class="nav-link"> Acerca de nosotros </a>
+            <a href="./nosotros.html" class="nav-link"> Acerca de nosotros </a>
           </li>
         </ul>
         <ul class="navbar-nav col-xs-4 border-mq">
           <li class="nav-item text-menu">
             <a href="#" class="nav-link" data-bs-toggle="modal" data-bs-target="#modalLogin"> Iniciar sesión </a>
           </li>
-          <a href="Registro.html" class="btn btn-primary btn-signup">Únete</a>
+          <a href="./Registro.html" class="btn btn-primary btn-signup">Únete</a>
         </ul>
       </div>
     </nav> <!-- navbar -->
@@ -168,7 +168,7 @@
 
 
         <div data-aos="fade-right"  data-aos-duration="3000">
-          <img src="/Assets/img/casa.jpg" alt="" style="border-radius:20px;height: 300px;margin-left: 30px;">
+          <img src="./Assets/img/casa.jpg" alt="" style="border-radius:20px;height: 300px;margin-left: 30px;">
         </div>
 
       </div>
@@ -335,7 +335,7 @@
   <footer class="bg-light text-dark text-center pb-2 pt-4 footer-class">
     <p>Hogari &copy; 2022 Todos los derechos Reservados</p>
   </footer> <!-- Termina footer -->
-  <script src="/Assets/JS/index/index.js"></script>
+ <script src="./Assets/JS/index/index.js"></script>
  <!-- <script src="./Assets/JS/login/login.js"></script>
   <script src="/quieneSomos.html"></script>
   <script src="/Assets/JS/quieneSomos.js"></script>-->
