--- a/nosotros.html
+++ b/nosotros.html
@@ -31,25 +31,25 @@
         <ul class="col-xs-4 navbar-nav mx-auto ms-auto py-2 text-menu">
           <li class="nav-item">
             <!--La clase active se debe de poner en cada página del en el navbar -->
-            <a href="/index.html" class="nav-link active" aria-current="page">
+            <a href="./index.html" class="nav-link active" aria-current="page">
               Inicio
             </a>
           </li>
           <li class="nav-item">
-            <a href="/ventas.html" class="nav-link"> Productos </a>
+            <a href="./ventas.html" class="nav-link"> Productos </a>
           </li>
           <li class="nav-item">
-            <a href="/contacto.html" class="nav-link"> Contáctanos </a>
+            <a href="./contacto.html" class="nav-link"> Contáctanos </a>
           </li>
           <li class="nav-item">
-            <a href="/nosotros.html" class="nav-link"> Acerca de nosotros </a>
+            <a href="./nosotros.html" class="nav-link"> Acerca de nosotros </a>
           </li>
         </ul>
         <ul class="navbar-nav col-xs-4 border-mq">
           <li class="nav-item text-menu">
             <a href="#" class="nav-link" data-bs-toggle="modal" data-bs-target="#modalLogin"> Iniciar sesión </a>
           </li>
-          <a href="Registro.html" class="btn btn-primary btn-signup">Únete</a>
+          <a href="./Registro.html" class="btn btn-primary btn-signup">Únete</a>
         </ul>
       </div>
     </nav> <!-- navbar -->
@@ -115,7 +115,7 @@
     <div class="container">
       <div class="row">
         <h2 class="text-center pb-5">¿Quienes somos?</h2>
-        <div class="col-md-4"><img src="Assets/img/living.jpg" alt=""
+        <div class="col-md-4"><img src="/proyecto-integrador-hogari/Assets/img/living.jpg" alt=""
             class="img-fluid rounded shadow-lg p-3 mb-5 bg-body"></div>
         <div class="col-md-8">
           <h3>Desarrolladores dinamita</h3>
