--- a/prueba.html
+++ b/prueba.html
@@ -32,25 +32,25 @@
             <ul class="col-xs-4 navbar-nav mx-auto ms-auto py-2 text-menu">
               <li class="nav-item">
                 <!--La clase active se debe de poner en cada página del en el navbar -->
-                <a href="/index.html" class="nav-link active" aria-current="page">
+                <a href="./index.html" class="nav-link active" aria-current="page">
                   Inicio
                 </a>
               </li>
               <li class="nav-item">
-                <a href="/ventas.html" class="nav-link"> Productos </a>
+                <a href="./ventas.html" class="nav-link"> Productos </a>
               </li>
               <li class="nav-item">
-                <a href="/contacto.html" class="nav-link"> Contáctanos </a>
+                <a href="./contacto.html" class="nav-link"> Contáctanos </a>
               </li>
               <li class="nav-item">
-                <a href="/nosotros.html" class="nav-link"> Acerca de nosotros </a>
+                <a href="./nosotros.html" class="nav-link"> Acerca de nosotros </a>
               </li>
             </ul>
             <ul class="navbar-nav col-xs-4 border-mq">
               <li class="nav-item text-menu">
                 <a href="#" class="nav-link" data-bs-toggle="modal" data-bs-target="#modalLogin"> Login </a>
               </li>
-              <a href="Registro.html" class="btn btn-primary btn-signup">Sign Up</a>
+              <a href="./Registro.html" class="btn btn-primary btn-signup">Sign Up</a>
             </ul>
           </div>
         </div>
