--- a/Registro.html
+++ b/Registro.html
@@ -40,20 +40,20 @@
             </a>
           </li>
           <li class="nav-item">
-            <a href="/ventas.html" class="nav-link"> Productos </a>
+            <a href="./ventas.html" class="nav-link"> Productos </a>
           </li>
           <li class="nav-item">
-            <a href="/contacto.html" class="nav-link"> Contáctanos </a>
+            <a href="./contacto.html" class="nav-link"> Contáctanos </a>
           </li>
           <li class="nav-item">
-            <a href="/nosotros.html" class="nav-link"> Acerca de nosotros </a>
+            <a href="./nosotros.html" class="nav-link"> Acerca de nosotros </a>
           </li>
         </ul>
         <ul class="navbar-nav col-xs-4 border-mq">
           <li class="nav-item text-menu">
             <a href="#" class="nav-link" data-bs-toggle="modal" data-bs-target="#modalLogin">Iniciar sesión </a>
           </li>
-          <a href="Registro.html" class="btn btn-primary btn-signup">Únete</a>
+          <a href="./Registro.html" class="btn btn-primary btn-signup">Únete</a>
         </ul>
       </div>
     </div>
@@ -69,7 +69,7 @@
                       </div>
                       <form class="rounded bg-white shadow p-5" id="form">
                         <h3 class="text-dark fw-bold fs-4 mb-2">Registro</h3>
-                        <div class="fw-normal text-muted mb-4">¿Ya tienes cuenta? <a href="login-registro.html">Inicia sesión</a></div>
+                        <div class="fw-normal text-muted mb-4">¿Ya tienes cuenta? <a href="./login-registro.html">Inicia sesión</a></div>
               
                         <div class="form-floating mb-3">
                           <!-- Nombre -->
@@ -140,7 +140,7 @@
             <img src="Assets/img/hogari-logo.png" class="img-fluid p-2 " width="50%" alt="">
             <form class="" id="form">
               <h3 class="text-dark fw-bold fs-4 mb-2">Inicio de sesión</h3>
-              <div class="fw-normal text-muted mb-4">¿No tienes cuenta? <a href="Registro.html">Registrate</a></div>
+              <div class="fw-normal text-muted mb-4">¿No tienes cuenta? <a href="./Registro.html">Registrate</a></div>
               <div class="form-floating mb-3">
                 <!-- Email -->
                 <input type="email" class="form-control" 
