--- a/ventas.html
+++ b/ventas.html
@@ -28,18 +28,18 @@
         <ul class="col-xs-4 navbar-nav mx-auto ms-auto py-2 text-menu">
           <li class="nav-item">
             <!--La clase active se debe de poner en cada página del en el navbar -->
-            <a href="/index.html" class="nav-link active" aria-current="page">
+            <a href="./index.html" class="nav-link active" aria-current="page">
               Inicio
             </a>
           </li>
           <li class="nav-item">
-            <a href="/ventas.html" class="nav-link"> Productos </a>
+            <a href="./ventas.html" class="nav-link"> Productos </a>
           </li>
           <li class="nav-item">
-            <a href="/contacto.html" class="nav-link"> Contáctanos </a>
+            <a href="./contacto.html" class="nav-link"> Contáctanos </a>
           </li>
           <li class="nav-item">
-            <a href="/nosotros.html" class="nav-link"> Acerca de nosotros </a>
+            <a href="./nosotros.html" class="nav-link"> Acerca de nosotros </a>
           </li>
         </ul>
         <ul class="navbar-nav col-xs-4 border-mq">
@@ -173,8 +173,8 @@
       <ul class="pagination justify-content">
 
         <li class="page-item"><a class="page-link" href="#">1</a></li>
-        <li class="page-item"><a class="page-link" href="/ventas2.html">2</a></li>
-        <li class="page-item"><a class="page-link" href="/ventas3.html">3</a></li>
+        <li class="page-item"><a class="page-link" href="./ventas2.html">2</a></li>
+        <li class="page-item"><a class="page-link" href="./ventas3.html">3</a></li>
        
       </ul>
     </nav>
@@ -259,7 +259,7 @@
 
 
  
-    <script src="/assets/js/ventas/ventas.js"></script>
+    <script src="/proyecto-integrador-hogari/Assets/JS/ventas/ventas.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js" integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-kjU+l4N0Yf4ZOJErLsIcvOU2qSb74wXpOhqTvwVx3OElZRweTnQ6d31fXEoRD1Jy" crossorigin="anonymous"></script>
